# PyPhyUtils

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
PyPhyUtils/: consel.py  consel_parser.py  custom_types.py  iqtree.py  iqtree_parser.py  iqtree_statstest_parser.py  iqtree_topology_tests.py  msa_metrics.py  raxml8.py  raxml8_parser.py  raxml8_statstest_parser.py  raxmlng.py  raxmlng_parser.py  regex_constants.py  utils.py
pyphyutils/: consel_parser.py  custom_types.py  raxmlng.py  raxmlng_parser.py  regex_constants.py  utils.py
