[metadata]
name = PyPhyUtils
description = Python Package for phylogenetic inference tool parsing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tschuelia/PyPhyUtils
author = Julia Haag
author_email = julia.haag@h-its.org
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
install_requires =
    regex
python_requires = >=3.6
package_dir=
    =.
packages = find:

[options.package_data]
* = *.pckl

[options.packages.find]
where = .